src/objects/Partner_Application__c.object
<CustomObject>
    <fields>
        <fullName>Business_Model__c</fullName>
        <label>Business Model</label>
        <picklist>
            <picklistValues>
                <fullName>Application partner / Developer Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier / Service provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Services Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Tailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network / System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Added Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Service Provider</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Product__c</fullName>
        <label>Category Product</label>
        <picklist>
            <picklistValues>
                <fullName>Barcode Scanners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers &amp; Terminals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels, Tags &amp; Ribbons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Services</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Certifications_Held_by_Technicians__c</fullName>
        <label>Certifications Held by Technicians</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Civilian__c</fullName>
        <label>% Federal Sales Civilian</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Classification_Other__c</fullName>
        <label>Classification Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Certifications__c</fullName>
        <label>Company Certifications</label>
        <picklist>
            <picklistValues>
                <fullName>List of training bundles?</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Company_DBA_Trading_Name_change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company DBA/Trading Name change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <label>Company Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Develops_Software_Firmware__c</fullName>
        <label>Company Develops Software/Firmware</label>
        <picklist>
            <picklistValues>
                <fullName>false</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>true</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Government_ID__c</fullName>
        <label>Company Government ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Id_Type__c</fullName>
        <label>Company ID Type</label>
        <picklist>
            <controllingField>Region_Requested__c</controllingField>
            <picklistValues>
                <fullName>Tax Registration ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT Registration ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA Tax Registration ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA Government ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA VAT Registration ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Legal_Name__c</fullName>
        <label>Company Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Legal_change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Legal Name change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Owned_Type__c</fullName>
        <label>Company Owned_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Privately Held</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publically Held</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Phone_Number__c</fullName>
        <label>Headquarters Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company_Sales_Tax_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Sales Tax Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Athrty_Secondary_Role__c</fullName>
        <label>Company Signature Athrty Secondary Role</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CxO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Athrty_State_Province__c</fullName>
        <label>Company Signature Athrty State/Province</label>
        <picklist>
            <controllingField>Company_Signature_Authority_Country__c</controllingField>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manitoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Athrty_Street_Address1__c</fullName>
        <label>Company Signature Athrty Street Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Athrty_Street_Address2__c</fullName>
        <label>Company Signature Athrty Street Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Authority_City_Town__c</fullName>
        <label>Company Signature Authority City/Town</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Authority_Country__c</fullName>
        <label>Company Signature Authority Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ascension Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Authority_Fax_Number__c</fullName>
        <label>Company Signature Authority Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Authority_First_Name__c</fullName>
        <label>Company Signature Authority First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Authority_Last_Name__c</fullName>
        <label>Company Signature Authority Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Authority_Phone_Number__c</fullName>
        <label>Company Signature Authority Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Authority_Primary_Lang__c</fullName>
        <label>Company Signature Authority Primary Lang</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simplified Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Authority_Primary_Role__c</fullName>
        <label>Company Signature Authority Primary Role</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CxO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Authority_Salutation__c</fullName>
        <label>Company Signature Authority Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Authority_Title__c</fullName>
        <label>Company Signature Authority Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Authrity_Mobile_Number__c</fullName>
        <label>Company Signature Authrity Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Authrty_Email_Address__c</fullName>
        <label>Company Signature Authrty Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Company_Tax_Registration_ID__c</fullName>
        <label>Company ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Technology_Preference__c</fullName>
        <label>Company Technology Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Data Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Radios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged Enterprise Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission Critical Radio Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional and Commercial Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Networks</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Company_Trading_Name__c</fullName>
        <inlineHelpText>Name by which customers know this business.</inlineHelpText>
        <label>Company DBA/Trading Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Vertical_Market_Preference__c</fullName>
        <label>Company Vertical Market Preference</label>
        <picklist>
            <picklistValues>
                <fullName>US Federal Government</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Company_Website__c</fullName>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Company_Zip_Code_Postal_Code__c</fullName>
        <label>Company Zip Code/Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_accreditations_Other__c</fullName>
        <description>Company accreditations Other</description>
        <label>Company accreditations Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_accreditations__c</fullName>
        <label>Company accreditations</label>
        <picklist>
            <picklistValues>
                <fullName>ISO 9000/9001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RoHS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Bar_Code_Scanner_Soln_Sales__c</fullName>
        <label>Competitor Bar Code Scanner Soln Sales</label>
        <picklist>
            <controllingField>Region_Requested__c</controllingField>
            <picklistValues>
                <fullName>Alien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ascom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluebird</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breezecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chainway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cypherlab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datalogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datalogic Scanning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Densei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enjoyor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujitsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honeywell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honeywell (inc Metrologic and HHP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honeywell Imaging Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impinj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invengo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keyences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lucent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LXE</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Device_Mgmt_Solution_Sales__c</fullName>
        <label>Competitor Device Mgmt Solution Sales</label>
        <picklist>
            <controllingField>Region_Requested__c</controllingField>
            <picklistValues>
                <fullName>Afaria from Sybase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airwatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avalanche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluebird</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breezecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chainway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cipherlab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>datalogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enjoyor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujitsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honeywell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impinj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermec Smartsystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invengo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keyences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lucent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LXE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metrologic</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Mobile_Computer_Solution_Sale__c</fullName>
        <label>Competitor Mobile Computer Solution Sale</label>
        <picklist>
            <controllingField>Region_Requested__c</controllingField>
            <picklistValues>
                <fullName>Alien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluebird</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breezecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chainway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CipherLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>datalogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datalogic Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Densei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enjoyor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujitsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gen2Wave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handheld Computers/Nautiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoft &amp; Wessel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honeywell Mobility Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impinj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invengo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Janam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keyences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lucent</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>